--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -32,11 +32,11 @@
     <string name="confirm">Megerősít</string>
     <string name="cancel">Bezár</string>
     <string name="color_pick">Válassz egy színt</string>
-    <string name="priority">Prioritás (0-10)</string>
+    <string name="priority">Prioritás (1-10)</string>
     <string name="has_deadline">Csak egy határidő</string>
     <string name="regularity">Rendszeres tevékenység</string>
     <string name="just_interval">Csak egy intervallum vagy határidős</string>
-    <string name="just_time_measure">Semelyik előző (pl. hobby)</string>
+    <string name="just_time_measure">Semelyik előző (pl. hobbi)</string>
     <string name="dates_type">Válaszd ki a rendszerességet!</string>
     <string name="deadline">Határidő</string>
     <string name="daily">naponta</string>
