--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -10,7 +10,7 @@
     <string name="nav_header_subtitle">example@email.com</string>
     <string name="nav_header_desc">Navigációs fejléc</string>
     <string name="action_settings">Beallitasok</string>
-    <string name="email">Email</string>
+    <string name="email">E-mail</string>
     <string name="password">Jelszó</string>
     <string name="login">Bejelentkezés</string>
     <string name="register">Regisztráció</string>
@@ -18,9 +18,9 @@
     <string name="name_required">Név megadása kötelező!</string>
     <string name="birth_date">Születési dátum</string>
     <string name="user_registration_successful">Regisztráció sikeres!</string>
-    <string name="user_registration_failure">Nem sikerült a regisztráció! Próbáld újra!</string>
+    <string name="user_registration_failure">Nem sikerült a regisztráció. Próbáld újra!</string>
     <string name="user_login_failure">Nem sikerült bejelentkezni! Ellenőrizd az adatokat!</string>
-    <string name="email_verification">Erősítsd meg előbb az email címedet!</string>
+    <string name="email_verification">Erősítsd meg előbb az e-mail címedet!</string>
     <string name="logout">Kijelentkezés</string>
     <string name="age_group">Korosztály</string>
     <string name="user_name">Név</string>
@@ -200,35 +200,35 @@
     <string name="ma_4">Férfi 50–59</string>
     <string name="ma_5">Férfi &gt;60</string>
     <string name="dark_mode">Sötét téma</string>
-    <string name="create_backup">"Adatok mentése felhőbe (internet kapcsolattal) "</string>
+    <string name="create_backup">"Adatok mentése felhőbe (internetkapcsolattal) "</string>
     <string name="save_data">Feltöltés</string>
     <string name="save_data_warning">Az utolsó mentésed felülíródik. Biztosan folytatod?</string>
-    <string name="restore_backup">Mentett adatok letöltése (internet kapcsolattal)</string>
+    <string name="restore_backup">Mentett adatok letöltése (internetkapcsolattal)</string>
     <string name="download_data">Letöltés</string>
     <string name="download_data_warning">A helyi adatok felülíródnak. Ha nem töltöttél fel ezelőtt adatot, minden eddigi el fog veszni. Biztosan folytatod?</string>
     <string name="create_backup_progress">Feltöltés folyamatban. Kérlek, ne hagyd el ezt az oldalt…</string>
     <string name="restore_backup_progress">Letöltés folyamatban. Kérlek, ne hagyd el ezt az oldalt…</string>
     <string name="registration_in_progress">Regisztráció folyamatban. Kérlek, várj…</string>
-    <string name="registration_email_required">Email cím megadása kötelező!</string>
-    <string name="registration_valid_email">Kérlek, valós email címet adj meg!</string>
+    <string name="registration_email_required">E-mail cím megadása kötelező!</string>
+    <string name="registration_valid_email">Kérlek, valós e-mail címet adj meg!</string>
     <string name="registration_password_required">Jelszó megadása kötelező!</string>
     <string name="registration_password_length">Minimum 6 karakter!</string>
     <string name="registration_name_required">Név megadása kötelező!</string>
     <string name="registration_birth_date_required">Születési dátum megadása kötelező!</string>
     <string name="login_went_wrong">Nem sikerült belépni. Kérlek, próbáld újra!</string>
     <string name="login_in_progress">Bejelentkezés folyamatban. Kérlek, várj…</string>
-    <string name="login_email_required">Email cím megadása kötelező!</string>
-    <string name="login_valid_email">Kérlek, valós email címet adj meg!</string>
+    <string name="login_email_required">E-mail cím megadása kötelező!</string>
+    <string name="login_valid_email">Kérlek, valós e-mail címet adj meg!</string>
     <string name="login_password_required">Jelszó megadása kötelező!</string>
     <string name="login_password_length">Minimum 6 karakter!</string>
     <string name="send_email">Küldés</string>
-    <string name="email_sending_in_progress">Email küldése folyamatban. Kérlek, várj…</string>
-    <string name="email_sending_fail">Nem sikerült elküldeni az emailt. Kérlek, próbáld újra!</string>
-    <string name="email_sending_successful">Nyisd meg az emailed! Mostantól megadhatod az új jelszót.</string>
-    <string name="forgot_password_email_required">Email cím megadása szükséges!</string>
-    <string name="forgot_password_valid_email">Kérlek, valós email címet adj meg!</string>
+    <string name="email_sending_in_progress">E-mail küldése folyamatban. Kérlek, várj…</string>
+    <string name="email_sending_fail">Nem sikerült elküldeni az e-mailt. Kérlek, próbáld újra!</string>
+    <string name="email_sending_successful">Nyisd meg az e-mailed! Mostantól megadhatod az új jelszót.</string>
+    <string name="forgot_password_email_required">E-mail cím megadása szükséges!</string>
+    <string name="forgot_password_valid_email">Kérlek, valós e-mail címet adj meg!</string>
     <string name="connect_to_stable_internet">Kérlek, csatlakozz egy stabil internethez!</string>
-    <string name="account_email">Email</string>
+    <string name="account_email">E-mail</string>
     <string name="account_birth_date">Születési dátum</string>
     <string name="account_age_group">Korosztály</string>
     <string name="account_user_name">Név</string>
@@ -240,7 +240,7 @@
     <string name="password_warning">A jelszó megváltoztatásához, kérlek, válaszd az Elfelejtett jelszó-t a bejelentkezés oldalon.</string>
     <string name="edit_account_button">Mentés</string>
     <string name="edit_was_successful">Felhasználói adatok frissítése befejeződött!</string>
-    <string name="edit_was_fail">Hiba! Ellenőrizd az internet kapcsolatot és próbáld újra a szerkesztést!</string>
+    <string name="edit_was_fail">Hiba! Ellenőrizd az internetkapcsolatot és próbáld újra a szerkesztést!</string>
     <string name="label_edit_account">Szerkesztés</string>
     <string name="select_color_for_activity">Válassz színt!</string>
     <string name="error_saving_no_user">Hiba! Nem lehet menteni. Kérlek, jelentkezz be újra!</string>
@@ -303,6 +303,6 @@
     <string name="pie_description_global_average">Ebben az időszakban a tevékenységgel töltött átlagos idő</string>
     <string name="create_backup_done">Adatok feltöltése sikeresen megtörtént!</string>
     <string name="restore_backup_done">Adatok letöltése megtörtént!</string>
-    <string name="create_backup_fail">Adatok feltöltése sikertelen. Kérlek, próbáld újra stabil internet kapcsolattal!</string>
-    <string name="restore_backup_fail">Adatok letöltése sikertelen. Kérlek, próbáld újra stabil internet kapcsolattal!</string>
+    <string name="create_backup_fail">Adatok feltöltése sikertelen. Kérlek, próbáld újra stabil internetkapcsolattal!</string>
+    <string name="restore_backup_fail">Adatok letöltése sikertelen. Kérlek, próbáld újra stabil internetkapcsolattal!</string>
 </resources>
